<resources>
    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="login_name_hint">Name</string>
    <string name="login_mobile_number_hint">Mobile Number</string>
    <string name="login">Login</string>
    <string name="app_name">FirstStep</string>
    <string name="report_button">Report !</string>
    <string name="report_msg_hint">Report your issue here and we will check and answer asap :D !</string>
    <string name="phone_number">Phone number</string>
    <string name="exp_99999999">exp: 99999999</string>
    <string name="submit">Submit</string>
    <string name="amount_of_tnd">Amount of TND</string>
    <string name="account_number">Account Number</string>
    <string name="exp_123456789101112">exp: 123456789101112</string>
    <string name="will_added_soon">Will added soon :)</string>
    <string-array name="date">
        <item>
            Tunis
        </item>
        <item>
            morocco
        </item>
        <item>
            Algeria
        </item>
        <item>
            Lybia
        </item>
        <item>
            Syria
        </item>
    </string-array>
    <string-array name="Withdraw_types">
        <item>D17</item>
        <item>Carte E-Dinar</item>
        <item>Carte Bancaire</item>
    </string-array>
</resources>