<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="8dp"
    android:layout_marginEnd="24dp"
    android:layout_marginStart="24dp"
    android:layout_marginTop="8dp"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <TextView
        android:id="@+id/Labbel"
        style="@style/loginHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/loginViewsMargin"
        android:layout_marginBottom="40dp"
        android:text="@string/app_name" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_below="@+id/Labbel"
        android:layout_above="@+id/faceAppLogin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        app:srcCompat="@drawable/compressed" />

    <Button
        android:id="@+id/faceAppLogin"
        style="@style/loginButton"
        android:layout_width="match_parent"
        android:layout_above="@+id/faceAppRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/login" />

    <Button
        android:id="@+id/faceAppRegister"
        style="@style/loginButton"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/register" />


</RelativeLayout>