<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="8dp"
    android:layout_marginEnd="24dp"
    android:layout_marginStart="24dp"
    android:layout_marginTop="8dp"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/loginHeader"
        android:text="Register"
        android:layout_marginTop="@dimen/loginViewsMargin"/>


    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/textInputName"
        style="@style/parent"
        android:layout_marginTop="@dimen/loginViewsMargin">

        <EditText
            android:id="@+id/name"
            style="@style/modifiedEditText"
            android:hint="@string/login_name_hint"
            android:inputType="textPersonName"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/usernameError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Username must have more than 5 characters!"
        android:textSize="10sp"
        android:visibility="gone"
        android:textColor="#FF0000"/>

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/textInputEmail"
        style="@style/parent"
        android:layout_marginTop="@dimen/loginViewsMargin">

        <EditText
            android:id="@+id/email"
            style="@style/modifiedEditText"
            android:hint="@string/login_email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/emailError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Email format is wrong!"
        android:textSize="10sp"
        android:visibility="gone"
        android:textColor="#FF0000"/>

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/textInputPassword"
        style="@style/parent"
        android:layout_marginTop="@dimen/loginViewsMargin">

        <EditText
            android:id="@+id/password"
            style="@style/modifiedEditText"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout
        >

    <TextView
        android:id="@+id/passwordError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Password must be more than 7 characters!"
        android:textSize="10sp"
        android:visibility="gone"
        android:textColor="#FF0000"/>

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/textConfirmPassword"
        style="@style/parent"
        android:layout_marginTop="@dimen/loginViewsMargin">

        <EditText
            android:id="@+id/confirmPassword"
            style="@style/modifiedEditText"
            android:hint="Confirm your password"
            android:inputType="textPassword"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout
        >
    <TextView
        android:id="@+id/confirmPasswordError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Confirmation must be identical to password !"
        android:textSize="10sp"
        android:visibility="gone"
        android:textColor="#FF0000"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/cirRegisterButton"
            style="@style/loginButton"
            android:text="Sign-Up"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/loginViewsMargin"/>
    </RelativeLayout>


    <TextView
        android:id="@+id/toLogin"
        style="@style/parent"
        android:textAlignment="textEnd"
        android:clickable="true"
        android:textStyle="bold"
        android:textColor="@color/primaryTextColor"
        android:text="@string/signup_login_hint"
        android:layout_marginTop="@dimen/loginViewsMargin"/>

</LinearLayout>